# coastal-express

./: .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: package-pypi.yml  package.yml  test.yml
cx/: __init__.py  cli.py  clockwise.py  main.py  test.py  view_vectors.py
example/: boundary.txt  example.sh  islands.txt
example/output/: boundary.txt  islands.txt
